后台页面完成 回访页面样式调整

--- a/imporNotice.html
+++ b/imporNotice.html
@@ -455,7 +455,7 @@
 		
 		//跳转详情页面
 		detailNotice = function(){
-			parent.getTab('廊坊部分小区停气通知','imporNoticeDetail.html','890');
+			parent.addTab('廊坊部分小区停气通知','imporNoticeDetail.html','890');
 		};
 		//选择城市
 		digCity = function(){
