--- a/replyUser.html
+++ b/replyUser.html
@@ -70,6 +70,12 @@
                 </div>
             </div>
 
+
+            <div style="display: inline-block;text-align: center;width: 100%;margin-top: 15px">
+                <button class="z_zBtnColor" style="float: none">确 定</button>
+                <button class="z_zBtnColor" style="float: none;margin-left: 20px">取 消</button>
+            </div>
+
         </div>
 
         <div class="z_rd_box_bottom">
@@ -196,20 +202,32 @@
         <span style="width: 100%; display: inline-block; text-align: center; font-size: 16px; margin-top: 50px;  color:blue;">赵大 16767667787</span>
         <span style="display: inline-block; width: 100%; text-align: center; margin-top: 25px;">呼叫失败</span>
         <label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-            <input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-            <span style="display: inline-block; float: left;">空号</span>
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="空号" checked="">
+                </div>
+            </div>
         </label>
-        <label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-            <input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-            <span style="display: inline-block; float: left;">用户忙</span>
+        <label style="width: 31%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="用户忙" checked="">
+                </div>
+            </div>
         </label>
-        <label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-            <input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-            <span style="display: inline-block; float: left;">无法接听</span>
+        <label style="width: 36%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="无法接听" checked="">
+                </div>
+            </div>
         </label>
-        <label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-            <input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-            <span style="display: inline-block; float: left;">无人接听</span>
+        <label style="width: 37%; cursor: pointer; margin-left: 8%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="无人接听" checked="">
+                </div>
+            </div>
         </label>
         <button style="display: inline-block; margin-left: 70px; margin-top: 12px;" type="button" class="btn btn-default">下一个</button>
         <button style="display: inline-block;  margin-top: 12px;" type="button" class="btn btn-default">结束</button>
