--- a/visiter.html
+++ b/visiter.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="layui/css/layui.css" media="all" />
 		<link rel="stylesheet" href="css/q_common.css" />
-		
 		<!--自定义样式-->
 		<link rel="stylesheet" href="css/visiter.css" />
 	</head>
@@ -211,27 +210,27 @@
 				<div class="vit_content_right">
 					<span style="width:95%; border-bottom: solid 1px #cccccc; margin-left: 12px; height:36px; line-height:36px;display: inline-block; font-size: 16px;">用户单信息</span>
 					<div style="border-bottom: solid 1px #cccccc; margin-bottom: 8px;" class="vit_right_form_info">
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">单号：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">sdd45345436554654643</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">单据类型：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单据类型：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">e城e家上门服务</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">建单时间：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">建单时间：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">1234:34:45 12:60</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">单号：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">sdd45345436554654643</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">用户评价：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">用户评价：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">3星</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">姓名：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">姓名：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">詹三三</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">手机号：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">手机号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">15655716787</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">联系地址：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">联系地址：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">河北省廊坊市三河市杨黄小区210-01-09</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">上门时间：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">上门时间：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; color:#FF6C60; line-height: 36px; text-align: left;">1234:34:45 12:60</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">服务：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">服务：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">水路-水龙头-水龙头安装</span>
-						<span style="display: inline-block; width: 15%; height: 36px; line-height: 36px;">备注：</span>
+						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">备注：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">水龙头安装</span>
 					</div>
 					<div class="vit_content_right_btn">
@@ -257,27 +256,39 @@
 			</div>
 		</div>
 		<div style="width: 300px; margin-left: 20px; height:300px;clear: both; border:solid 1px #000000; background-color: #ffffff;">
-			<span style="width: 100%; display: inline-block; text-align: center; font-size: 16px; margin-top: 50px;  color:blue;">赵大 16767667787</span>
-			<span style="display: inline-block; width: 100%; text-align: center; margin-top: 25px;">呼叫失败</span>
-			<label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-				<input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-				<span style="display: inline-block; float: left;">空号</span>
-			</label>
-			<label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-				<input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-				<span style="display: inline-block; float: left;">用户忙</span>
-			</label>
-			<label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-				<input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-				<span style="display: inline-block; float: left;">无法接听</span>
-			</label>
-			<label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
-				<input style="display: inline-block; float: left; margin-right: 5px;" type="radio"/>
-				<span style="display: inline-block; float: left;">无人接听</span>
-			</label>
-			<button style="display: inline-block; margin-left: 70px; margin-top: 12px;" type="button" class="btn btn-default">下一个</button>
-  			<button style="display: inline-block;  margin-top: 12px;" type="button" class="btn btn-default">结束</button>
-		</div>
+        <span style="width: 100%; display: inline-block; text-align: center; font-size: 16px; margin-top: 50px;  color:blue;">赵大 16767667787</span>
+        <span style="display: inline-block; width: 100%; text-align: center; margin-top: 25px;">呼叫失败</span>
+        <label style="width: 30%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="空号" checked="">
+                </div>
+            </div>
+        </label>
+        <label style="width: 31%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="用户忙" checked="">
+                </div>
+            </div>
+        </label>
+        <label style="width: 36%; cursor: pointer; margin-left: 15%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="无法接听" checked="">
+                </div>
+            </div>
+        </label>
+        <label style="width: 37%; cursor: pointer; margin-left: 8%;  font-weight: 100;  margin-top: 20px;">
+            <div class="layui-form-item">
+                <div class="layui-input-block" style="margin-left: 0;margin-top: -10px">
+                    <input type="radio" name="" value="" title="无人接听" checked="">
+                </div>
+            </div>
+        </label>
+        <button style="display: inline-block; margin-left: 70px; margin-top: 12px;" type="button" class="btn btn-default">下一个</button>
+        <button style="display: inline-block;  margin-top: 12px;" type="button" class="btn btn-default">结束</button>
+    </div>
 	</body>
 	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
 	<script src="js/jquery.pagination.min.js" type="text/javascript"></script>
