回访样式调整

--- a/visiter.html
+++ b/visiter.html
@@ -210,27 +210,27 @@
 				<div class="vit_content_right">
 					<span style="width:95%; border-bottom: solid 1px #cccccc; margin-left: 12px; height:36px; line-height:36px;display: inline-block; font-size: 16px;">用户单信息</span>
 					<div style="border-bottom: solid 1px #cccccc; margin-bottom: 8px;" class="vit_right_form_info">
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单号：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">单号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">sdd45345436554654643</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单据类型：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">单据类型：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">e城e家上门服务</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">建单时间：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">建单时间：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">1234:34:45 12:60</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">单号：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">单号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">sdd45345436554654643</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">用户评价：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">用户评价：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">3星</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">姓名：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">姓名：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">詹三三</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">手机号：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">手机号：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">15655716787</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">联系地址：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">联系地址：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">河北省廊坊市三河市杨黄小区210-01-09</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">上门时间：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">上门时间：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; color:#FF6C60; line-height: 36px; text-align: left;">1234:34:45 12:60</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">服务：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">服务：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">水路-水龙头-水龙头安装</span>
-						<span style="display: inline-block; width: 16%%; height: 36px; line-height: 36px;">备注：</span>
+						<span style="display: inline-block; width: 16%; height: 36px; line-height: 36px;">备注：</span>
 						<span style="display: inline-block; color: #666666; width: 70%; height: 36px; line-height: 36px; text-align: left;">水龙头安装</span>
 					</div>
 					<div class="vit_content_right_btn">
